# django_intro

./: .gitignore  README.md  pyproject.toml
about/: tests.py  urls.py  views.py
demo_app/: tests.py  urls.py  views.py
demo_project/: settings.py  urls.py
templates/: base.html
templates/about/: about.html
templates/demo_app/: welcome.html
templates/partials/: _alerts.html  _footer.html  _navbar.html
